Ticket #1003 (closed defect: fixed)

Opened 2 years ago

Last modified 2 years ago

shoutcast/icecast output support broken (regression in 0.8.6 final already)

Reported by: trax Assigned to:
Priority: normal Milestone: 0.9.0 bugs
Component: Stream output Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description (Last modified by trax)

Shout output fails to open shout stream with Socket error and then stream_out_standard private error: no suitable sout access module. Not related to any recent changes in shout.c

final 0.8.6 and 0.8.6a both fail

nightly 0.8.6 branch

(no earlier branched version of 0.8.6 exists)
branch-20061009-1643 Socket error

nightly 0.9.0 trunk

20061124-0001 OK
20061126-0001 Socket error

compiled from svn

(no earlier tested yet)
18009 (11/23/06 17:06:13) Socket error
18021 (11/24/06 18:21:09) Socket error

Change History

16/01/07 00:44:28 changed by trax

  • description changed.

27/01/07 21:45:55 changed by trax

  • description changed.

08/04/07 16:04:33 changed by Trax

  • status changed from new to closed.
  • resolution set to fixed.

(In [19745]) * modules/access_output/shout.c: Initialize shout settings properly and make ICY the default protocol. This fixes some libshout Socket error messages on initialization. Closes #1003.

12/04/07 21:15:49 changed by Trax

(In [19777]) * modules/access_output/shout.c: Make ICY the default protocol and set protocol rollover from shoutcast to icecast. This fixes some libshout Socket error messages. Refs #1003. Partly backported from [19745].