* modules/access_output/shout.c: Initialize shout settings properly and make ICY the default protocol. This fixes some libshout Socket error messages on initialization. Closes #1003.